--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
-    "package": "npm prune -production; electron-packager . --electron-version=3.0.0 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build"
+    "package": "npm prune -production; electron-packager . --electron-version=3.1.9 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -21,26 +21,26 @@
   },
   "dependencies": {
     "dateformat": "^3.0.3",
-    "electron-store": "^2.0.0",
-    "fs-extra": "^7.0.0",
-    "jquery": "^3.3.1",
-    "marked": "^0.5.1",
+    "electron-store": "^3.2.0",
+    "fs-extra": "^7.0.1",
+    "jquery": "^3.4.1",
+    "marked": "^0.6.2",
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
     "simplemde": "^1.11.2"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-cssnano": "^2.1.2",
+    "electron": "^3.1.9",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-htmlmin": "^5.0.1",
     "gulp-iconutil": "^1.2.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify-es": "^1.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify-es": "^1.0.4",
     "pump": "^3.0.0",
-    "reset-css": "^4.0.1",
-    "run-sequence": "^2.2.1"
+    "reset-css": "^4.0.1"
   }
 }
