--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
@@ -21,13 +21,13 @@
   },
   "dependencies": {
     "dateformat": "^3.0.3",
+    "easymde": "^2.6.0",
     "electron-store": "^3.2.0",
     "fs-extra": "^7.0.1",
     "jquery": "^3.4.1",
     "marked": "^0.6.2",
     "pretty": "^2.0.0",
-    "remove-markdown": "^0.3.0",
-    "simplemde": "^1.11.2"
+    "remove-markdown": "^0.3.0"
   },
   "devDependencies": {
     "electron": "^3.1.9",
