--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
-    "package": "npm prune -production; electron-packager . --electron-version=3.1.9 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build"
+    "package": "npm prune -production; electron-packager . --electron-version=3.1.9 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true"
   },
   "author": {
     "name": "D.G. Midwinter",
