--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "remove-markdown": "^0.3.0"
   },
   "devDependencies": {
+    "del": "^5.1.0",
     "electron": "^3.1.13",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
