--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "easymde": "^2.8.0",
     "electron-store": "^5.0.0",
     "fs-extra": "^8.1.0",
+    "highlight.js": "^9.15.10",
     "i18next": "^17.0.14",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
