--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
-    "package": "npm prune -production; electron-packager . --electron-version=3.1.13 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true"
+    "package": "gulp build; npm prune -production; electron-packager . --electron-version=3.1.13 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -17,9 +17,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/dgmid/nextcloud-notes-mac-client"
   },
+  "bugs": "https://github.com/dgmid/nextcloud-notes-mac-client/issues",
   "dependencies": {
+    "compare-versions": "^3.5.1",
     "dateformat": "^3.0.3",
     "easymde": "^2.8.0",
     "electron-store": "^5.0.0",
@@ -45,6 +47,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-string-replace": "^1.1.2",
     "gulp-uglify-es": "^1.0.4",
     "pump": "^3.0.0",
     "reset-css": "^4.0.1"
