--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-store": "^5.0.0",
     "fs-extra": "^8.1.0",
     "highlight.js": "^9.15.10",
+    "html-entities": "^1.2.1",
     "i18next": "^17.0.16",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
