--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.3.4",
+  "version": "1.3.5-beta",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
@@ -25,6 +25,7 @@
     "compare-versions": "^3.5.1",
     "dateformat": "^3.0.3",
     "easymde": "^2.8.0",
+    "electron-log": "^3.0.8",
     "electron-store": "^5.0.0",
     "fs-extra": "^8.1.0",
     "highlight.js": "^9.15.10",
@@ -50,8 +51,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-string-replace": "^1.1.2",
-    "gulp-uglify-es": "^1.0.4",
+    "gulp-uglify-es": "^2.0.0",
     "pump": "^3.0.0",
-    "reset-css": "^4.0.1"
+    "reset-css": "^5.0.1"
   }
 }
