--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
-    "package": "gulp build; npm prune -production; electron-packager . --electron-version=6.0.11 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
+    "package": "gulp build; npm prune -production; electron-packager . --electron-version=7.0.0 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -30,7 +30,7 @@
     "fs-extra": "^8.1.0",
     "highlight.js": "^9.15.10",
     "html-entities": "^1.2.1",
-    "i18next": "^17.2.0",
+    "i18next": "^17.3.0",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
     "jquery": "^3.4.1",
@@ -41,7 +41,8 @@
   },
   "devDependencies": {
     "del": "^5.1.0",
-    "electron": "^6.0.12",
+    "devtron": "^1.4.0",
+    "electron": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
