--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/dgmid/nextcloud-notes-mac-client"
   },
   "bugs": "https://github.com/dgmid/nextcloud-notes-mac-client/issues",
+  "browserslist": [
+    "last 1 Chrome versions"
+  ],
   "dependencies": {
     "color": "^3.1.2",
     "compare-versions": "^3.5.1",
