--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
+    "debug": "electron . --debug-brk = 5858",
     "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=7.1.2 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
@@ -45,7 +46,7 @@
   "devDependencies": {
     "del": "^5.1.0",
     "devtron": "^1.4.0",
-    "electron": "^7.1.2",
+    "electron": "^7.1.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
