--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "compare-versions": "^3.5.1",
     "dateformat": "^3.0.3",
     "easymde": "^2.8.0",
-    "electron-log": "^4.0.1",
+    "electron-log": "^4.0.2",
     "electron-store": "^5.1.0",
     "fs-extra": "^8.1.0",
     "highlight.js": "^9.17.1",
@@ -43,7 +43,8 @@
     "marked": "^0.8.0",
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
-    "stemmer": "^1.0.4"
+    "stemmer": "^1.0.4",
+    "stopword": "^0.3.4"
   },
   "devDependencies": {
     "del": "^5.1.0",
