--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "marked": "^0.8.0",
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
+    "replace-string": "^3.0.0",
     "snowball": "^0.3.1",
     "stopword": "^0.3.4"
   },
