--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.4.0",
+  "version": "1.4.1-alpha",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
     "debug": "electron . --debug-brk = 5858",
-    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=7.1.10 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
+    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=7.1.11 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -29,10 +29,10 @@
     "compare-versions": "^3.5.1",
     "dateformat": "^3.0.3",
     "easymde": "^2.9.0",
-    "electron-log": "^4.0.4",
+    "electron-log": "^4.0.5",
     "electron-store": "^5.1.0",
     "fs-extra": "^8.1.0",
-    "highlight.js": "^9.18.0",
+    "highlight.js": "^9.18.1",
     "html-entities": "^1.2.1",
     "i18next": "^19.1.0",
     "i18next-electron-language-detector": "0.0.10",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "del": "^5.1.0",
     "devtron": "^1.4.0",
-    "electron": "^7.1.10",
+    "electron": "^7.1.11",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
