--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.4.1",
+  "version": "1.4.2-alpha",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
   "scripts": {
     "start": "electron .",
     "debug": "electron . --debug-brk = 5858",
-    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=7.1.14 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
+    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=8.2.2 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -28,16 +28,16 @@
     "color": "^3.1.2",
     "compare-versions": "^3.6.0",
     "dateformat": "^3.0.3",
-    "easymde": "^2.10.0",
+    "easymde": "^2.10.1",
     "electron-log": "^4.1.1",
     "electron-store": "^5.1.1",
     "fs-extra": "^9.0.0",
     "highlight.js": "^9.18.1",
-    "html-entities": "^1.2.1",
-    "i18next": "^19.3.4",
+    "html-entities": "^1.3.1",
+    "i18next": "^19.4.1",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "jquery-i18next": "^1.2.1",
     "js-search": "^2.0.0",
     "marked": "^0.8.2",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "del": "^5.1.0",
     "devtron": "^1.4.0",
-    "electron": "^7.1.14",
+    "electron": "^8.2.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
