--- a/package.json
+++ b/package.json
@@ -32,33 +32,32 @@
     "electron-log": "^4.1.1",
     "electron-store": "^5.1.1",
     "fs-extra": "^9.0.0",
-    "highlight.js": "^9.18.1",
+    "highlight.js": "^10.0.1",
     "html-entities": "^1.3.1",
-    "i18next": "^19.4.3",
+    "i18next": "^19.4.4",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
     "jquery": "^3.5.0",
     "jquery-i18next": "^1.2.1",
     "js-search": "^2.0.0",
-    "marked": "^0.8.2",
+    "marked": "^1.0.0",
     "mousetrap": "^1.6.5",
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
     "replace-string": "^3.0.0",
-    "snowball": "^0.3.1",
-    "stopword": "^1.0.0"
+    "snowball": "^0.3.1"
   },
   "devDependencies": {
     "del": "^5.1.0",
     "devtron": "^1.4.0",
-    "electron": "^8.2.3",
+    "electron": "^8.2.4",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-htmlmin": "^5.0.1",
     "gulp-iconutil": "^1.2.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-string-replace": "^1.1.2",
     "gulp-uglify-es": "^2.0.0",
