--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
     "replace-string": "^3.0.0",
-    "snowball": "^0.3.1"
+    "snowball": "^0.3.1",
+    "stopword": "^1.0.1"
   },
   "devDependencies": {
     "del": "^5.1.0",
