--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.4.2-beta",
+  "version": "1.4.2",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
@@ -32,7 +32,7 @@
     "electron-log": "^4.1.2",
     "electron-store": "^5.1.1",
     "fs-extra": "^9.0.0",
-    "highlight.js": "^10.0.1",
+    "highlight.js": "^10.0.2",
     "html-entities": "^1.3.1",
     "i18next": "^19.4.4",
     "i18next-electron-language-detector": "0.0.10",
