--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.4.3",
+  "version": "1.4.4-alpha",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
@@ -29,7 +29,7 @@
     "compare-versions": "^3.6.0",
     "dateformat": "^3.0.3",
     "easymde": "^2.10.1",
-    "electron-log": "^4.1.2",
+    "electron-log": "^4.1.3",
     "electron-store": "^5.1.1",
     "fs-extra": "^9.0.0",
     "highlight.js": "^10.0.3",
@@ -40,7 +40,7 @@
     "jquery": "^3.5.1",
     "jquery-i18next": "^1.2.1",
     "js-search": "^2.0.0",
-    "marked": "^1.0.0",
+    "marked": "^1.1.0",
     "mousetrap": "^1.6.5",
     "pretty": "^2.0.0",
     "remove-markdown": "^0.3.0",
