--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-notes-client",
-  "version": "1.4.4",
+  "version": "1.4.5-alpha",
   "productName": "Nextcloud Notes Client",
   "description": "Access and edit your Nextcloud Notes on the Mac",
   "main": "dist/js/main.min.js",
@@ -29,14 +29,14 @@
   "dependencies": {
     "color": "^3.1.3",
     "compare-versions": "^3.6.0",
-    "dateformat": "^3.0.3",
+    "dateformat": "^4.0.0",
     "easymde": "^2.13.0",
     "electron-log": "^4.3.0",
     "electron-store": "^6.0.1",
     "fs-extra": "^9.0.1",
-    "highlight.js": "^10.3.2",
+    "highlight.js": "^10.4.0",
     "html-entities": "^1.3.1",
-    "i18next": "^19.8.3",
+    "i18next": "^19.8.4",
     "i18next-electron-language-detector": "0.0.10",
     "i18next-sync-fs-backend": "^1.1.1",
     "jquery": "^3.5.1",
