--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "electron .",
     "rebuild": "./node_modules/.bin/electron-rebuild",
     "debug": "electron . --debug-brk = 5858",
-    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=11.4.2 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;",
-    "package-arm": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=11.4.2 --overwrite --platform=darwin --arch=arm64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
+    "package": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=12.0.4 --overwrite --platform=darwin --arch=x64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;",
+    "package-arm": "gulp build; npm prune -production; electron-packager . --asar=true --electron-version=12.0.4 --overwrite --platform=darwin --arch=arm64 --icon=dist/assets/icon/icon.icns --ignore=\"app-source|gulpfile\\.js|README\\.md\" --prune=false --out=build --darwinDarkModeSupport=true; npm install;"
   },
   "author": {
     "name": "D.G. Midwinter",
@@ -27,6 +27,7 @@
     "last 1 Chrome versions"
   ],
   "dependencies": {
+    "@electron/remote": "^1.1.0",
     "color": "^3.1.3",
     "compare-versions": "^3.6.0",
     "dateformat": "^4.5.1",
@@ -53,7 +54,7 @@
   "devDependencies": {
     "del": "^6.0.0",
     "devtron": "^1.4.0",
-    "electron": "^11.4.2",
+    "electron": "^12.0.4",
     "electron-rebuild": "^2.3.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
