--- a/package.json
+++ b/package.json
@@ -62,11 +62,12 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-iconutil": "^1.2.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.1",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-string-replace": "^1.1.2",
     "gulp-uglify-es": "^2.0.0",
     "pump": "^3.0.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "sass": "^1.35.2"
   }
 }
